# crewai_fintech_research_flow

./: .coverage  README.md  pyproject.toml
.cursor/: mcp.json
src/flow_researcher/: main.py
src/flow_researcher/crews/financial_analyst_crew/: __init__.py  financial_analyst_crew.py
src/flow_researcher/crews/financial_analyst_crew/config/: agents.yaml  tasks.yaml
src/flow_researcher/flows/: README.md  __init__.py  financial_snapshot_flow.py
src/flow_researcher/tools/: README.md  __init__.py  bulk_data_tools.py  company_tools.py  convenience_tools.py  edgar_index_tools.py  edgar_url_tools.py  filing_document_tools.py  filing_tools.py  rss_tools.py  sec_http_client.py  sec_tools_spec.md  xbrl_tools.py
tests/: __init__.py  test_bulk_data_tools.py  test_company_tools.py  test_convenience_tools.py  test_edgar_index_tools.py  test_edgar_url_tools.py  test_filing_document_tools.py  test_filing_tools.py  test_rss_tools.py  test_sec_http_client.py  test_xbrl_tools.py
