[project]
name = "flow_researcher"
version = "0.1.0"
description = "flow-researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.0",
    "litellm>=1.75.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
kickoff = "flow_researcher.main:kickoff"
run_crew = "flow_researcher.main:kickoff"
plot = "flow_researcher.main:plot"
run_with_trigger = "flow_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
